Feat: Adicionado envio de email via fale conosco

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-APP_NAME=Laravel
+APP_NAME=Samobilidade
 APP_ENV=local
 APP_KEY=base64:hpl1nSiq78YLd06X28HF1rDDzMA2/T3rCRsj/EOKdn0=
 APP_DEBUG=true
@@ -46,13 +46,13 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_MAILER=log
-MAIL_HOST=127.0.0.1
-MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS="hello@example.com"
+MAIL_MAILER=smtp
+MAIL_HOST=smtp.office365.com
+MAIL_PORT=587
+MAIL_USERNAME='EMAIL_DESEJADO_PARA_O_PROJETO'
+MAIL_PASSWORD='SENHA DO EMAIL'
+MAIL_ENCRYPTION=STARTTLS
+MAIL_FROM_ADDRESS='EMAIL_DESEJADO_PARA_O_PROJETO'
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
